@@ -1,4 +1,16 @@
 
+2022-09-08  Simon Sobisch <simonsobisch@gnu.org>
+
+	* screenio.c (cob_get_color_pair, cob_screen_init): fix overflow
+	  when COLOR_PAIRS is bigger than SHRT_MAX
+	* screenio.c (cob_screen_init) [__PDCURSES__]: fix missing initialization
+	  because of preprocessor symbols dropped
+
+2022-09-01  Simon Sobisch <simonsobisch@gnu.org>
+
+	* screenio.c (cob_exit_screen): ensure to not end COB_EXIT_MESSAGE
+	  on mouse-move
+
 2022-08-19  Simon Sobisch <simonsobisch@gnu.org>
 
 	* mlio.c, common.h: added XML PARSE stub including minimal
