@@ -1,4 +1,8 @@
 
+2022-09-08  Simon Sobisch <simonsobisch@gnu.org>
+
+	* configure.ac: cleanup curses library check
+
 2022-07-27  Simon Sobisch <simonsobisch@gnu.org>
 
 	* configure.ac: check for ncursesw first, then ncurses;
